--- a/MathematikLabor/Sympy_und_Matplotlib_bearbeitet.ipynb
+++ b/MathematikLabor/Sympy_und_Matplotlib_bearbeitet.ipynb
@@ -478,25 +478,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle 2 x^{4} + 4 x^{2} y^{3} + 2 y^{6}$"
-      ],
-      "text/plain": [
-       "2*x**4 + 4*x**2*y**3 + 2*y**6"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'expand' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32md:\\Unistuff programmieren\\Inf1\\MathematikLabor\\Sympy_und_Matplotlib_bearbeitet.ipynb Cell 35'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Unistuff%20programmieren/Inf1/MathematikLabor/Sympy_und_Matplotlib_bearbeitet.ipynb#ch0000034?line=0'>1</a>\u001b[0m expand(\u001b[39m\"\u001b[39m\u001b[39m_\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'expand' is not defined"
+     ]
     }
    ],
    "source": [
-    "expand(_) "
+    "#expand(_) "
    ]
   },
   {
@@ -1553,7 +1551,7 @@
    ],
    "source": [
     "# der Befehl \"%matplotlib notebook\"ermöglicht interaktiven Plot\n",
-    "%matplotlib notebook   \n",
+    "# %matplotlib notebook   \n",
     "x = symbols('x')  \n",
     "#plot von sympy\n",
     "plot(cos(x),(x,0,2*pi)) "
