--- a/MathematikLabor/Sympy_und_Matplotlib_bearbeitet.ipynb
+++ b/MathematikLabor/Sympy_und_Matplotlib_bearbeitet.ipynb
@@ -140,18 +140,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'x' is not defined",
+     "evalue": "name 'sequence' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32md:\\Unistuff programmieren\\Inf1\\MathematikLabor\\Sympy_und_Matplotlib_bearbeitet.ipynb Cell 12'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Unistuff%20programmieren/Inf1/MathematikLabor/Sympy_und_Matplotlib_bearbeitet.ipynb#ch0000011?line=0'>1</a>\u001b[0m \u001b[39mlist\u001b[39m(sequence(sqrt(x)\u001b[39m.\u001b[39mevalf(\u001b[39m3\u001b[39m), (x,\u001b[39m1\u001b[39m,\u001b[39m10\u001b[39m)))\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'x' is not defined"
+      "\u001b[1;32md:\\ProgrammingLearning - Github\\MathematikLabor\\Sympy_und_Matplotlib_bearbeitet.ipynb Cell 12'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/ProgrammingLearning%20-%20Github/MathematikLabor/Sympy_und_Matplotlib_bearbeitet.ipynb#ch0000011?line=0'>1</a>\u001b[0m \u001b[39mlist\u001b[39m(sequence(sqrt(x)\u001b[39m.\u001b[39mevalf(\u001b[39m3\u001b[39m), (x,\u001b[39m1\u001b[39m,\u001b[39m10\u001b[39m)))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'sequence' is not defined"
      ]
     }
    ],
@@ -1362,9 +1362,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 9, 16, 25]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from mpmath import *  \n",
     "from sympy import * \n",
@@ -1384,12 +1395,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sympy import * \n",
-    "\n",
+    "x,y = symbols(\"x y\")\n",
     "F = 2 - sqrt(x+y)"
    ]
   },
@@ -1473,9 +1484,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(19, 1, -18)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "xx,yy,zz = symbols(\"xx yy zz\") \n",
     "xx,yy,zz=solve([Eq(xx+yy, 20),Eq(xx+zz, 1), Eq(xx+yy+zz, 2)]).values()\n",
@@ -1791,7 +1813,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
