--- a/MathematikLabor/NumPy_bearbeitet.ipynb
+++ b/MathematikLabor/NumPy_bearbeitet.ipynb
@@ -1000,18 +1000,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[0, 1, 2, 3, 4, 5, 6, 0, 1, 2, 3, 4, 5, 6]"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'arr_1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32md:\\ProgrammingLearning - Github\\MathematikLabor\\NumPy_bearbeitet.ipynb Cell 60'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/ProgrammingLearning%20-%20Github/MathematikLabor/NumPy_bearbeitet.ipynb#ch0000059?line=0'>1</a>\u001b[0m \u001b[39mlist\u001b[39m(arr_1) \u001b[39m+\u001b[39m \u001b[39mlist\u001b[39m(arr_1)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'arr_1' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1020,26 +1021,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\abka0001\\AppData\\Local\\Continuum\\anaconda3\\envs\\dfss\\lib\\site-packages\\ipykernel_launcher.py:4: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  after removing the cwd from sys.path.\n"
+     "ename": "NameError",
+     "evalue": "name 'arr_1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32md:\\ProgrammingLearning - Github\\MathematikLabor\\NumPy_bearbeitet.ipynb Cell 61'\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/ProgrammingLearning%20-%20Github/MathematikLabor/NumPy_bearbeitet.ipynb#ch0000060?line=0'>1</a>\u001b[0m \u001b[39m# Bei Division durch Null gibt es nur eine Warnung, keinen Fehler!\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/ProgrammingLearning%20-%20Github/MathematikLabor/NumPy_bearbeitet.ipynb#ch0000060?line=1'>2</a>\u001b[0m \u001b[39m# Das \"Ergebnis\" wird durch \"nan\" ersetzt.\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/ProgrammingLearning%20-%20Github/MathematikLabor/NumPy_bearbeitet.ipynb#ch0000060?line=3'>4</a>\u001b[0m arr_1 \u001b[39m/\u001b[39m arr_1\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'arr_1' is not defined"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([nan,  1.,  1.,  1.,  1.,  1.,  1.])"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1071,18 +1065,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([0, 0, 0, 0, 0, 0, 0])"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'arr_1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32md:\\ProgrammingLearning - Github\\MathematikLabor\\NumPy_bearbeitet.ipynb Cell 63'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/ProgrammingLearning%20-%20Github/MathematikLabor/NumPy_bearbeitet.ipynb#ch0000062?line=0'>1</a>\u001b[0m arr_1 \u001b[39m-\u001b[39m arr_1\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'arr_1' is not defined"
+     ]
     }
    ],
    "source": [
